1672.	[build]		fdupont
	Deprecated bind1st and bind2nd templates were replaced with
	lambda expressions or plain bind templates.
	(Gitlab #919,!521, git b12fa3374454c9c0d749557d5532aab55dbc58d9)

1671.	[bug]		tmark
	Corrected an issue in kea-dhcp6 where the server would fail
	to extend the expiry of a existing dynamic lease assigned to
	client with host reservation.
	(Gitlab #754,!558, git c223380012b82c93292528b593002c2b80b5361b)

1670.	[func]		fdupont
	Added searches for host reservations by hostname and by hostname
	and subnet.
	(Gitlan #392,!529, git 50068ada6b277c9251de9062501d8c478a8f5529)

1669.	[func]		tmark
	Rather than within the 'dhcp-ddns' section, DDNS behavioral
	parameters may now be specifed at global, shared-network,
	and subnet scopes.  Implemented for both kea-dhcp4 and
	kea-dhcp6.  Not yet supported by Config Backend or Netconf.
	(Gitlab #35,!517, git 49ce6286f5d00f99c1c890f12cbc0fd633c9dbf6)

1668.	[build]		fdupont
	The Kea util thread library was removed.
	(Gitlab #907,!519, git 1b27dc52aae23753643461086f0950b125bf9c93)

1667.	[build]		fdupont
	The availability of C++11 thead, mutex, condition variable and
	atomic librairies is now checked by ./configure.
	(Gitlab #918,!520, git baf4097520c1cd38366ee4f33a95dde040906e9e)

1666.	[doc]		tmark
	Added note in ARM about manually admining cb data being possible
	but not supported.
	(Gitlab #917,!518, git f242e5c2e0e14331172671477dce3a6597691b55)

Kea 1.7.0 released on Sep 25, 2019

1665.	[build]		tmark
	Bumped up library version numbers for Kea 1.7.0 final release.
	(Gitlab #924,!526, git c4061d0fdd660c8e375b4e1317603935ccc00b39)

1664.	[build]		razvan
	Make sysrepo_config detect installed sysrepo version.
	(Gitlab #766,!449, git e1a236fa4f4680d3eadade6b5f5a6a6065620a5b)

1663.	[build]		fdupont
	Dropped support for Botan 1.x crypto library in Kea as these
	versions are now end of life.
	(Gitlab #345,!498, git ba028eee986c0da963754c6fcb74790081557bec)

1662.	[bug]		marcin