@@ -1,3 +1,11 @@
+1673.	[bug]		tmark
+	Fixed a bug introduced in Kea 1.6.0 (see #539) that caused
+	kea-dhcp4 and kea-dhcp6 to discard inbound packets containing
+	string options that consist solely of nulls.  The servers
+	will now quiely omit empty or all-null string options from
+	inbound packets.
+	(Gitlab #900, !561 git TBD)
+
 1672.	[build]		fdupont
 	Deprecated bind1st and bind2nd templates were replaced with
 	lambda expressions or plain bind templates.
